<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newstory.NewStoryActivity">

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_photo_black"
        android:contentDescription="@string/this_is_imageview" />

    <TextView
        android:id="@+id/title_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lat"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="@id/tv_lat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_lat"
        app:layout_constraintBottom_toBottomOf="@id/tv_lat" />

    <TextView
        android:id="@+id/tv_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_lat"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@+id/launchCamera"
        app:layout_constraintStart_toEndOf="@id/title_lat"
        app:layout_constraintTop_toBottomOf="@+id/guideline3"/>

    <ImageButton
        android:id="@+id/launchCamera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/camera"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_photo_camera_24"
        app:layout_constraintBottom_toTopOf="@+id/textCameraLaunch"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCenterVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_lat"
        tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textCameraLaunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/descTextLayout"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCenterVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launchCamera" />

    <TextView
        android:id="@+id/title_lon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/lon"
        app:layout_constraintTop_toTopOf="@id/tv_lon"
        app:layout_constraintEnd_toStartOf="@id/tv_lon"
        app:layout_constraintBottom_toBottomOf="@id/tv_lon" />

    <TextView
        android:id="@+id/tv_lon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_lon"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/launchGallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline3"/>

    <ImageButton
        android:id="@+id/launchGallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/gallery"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_image_24"
        android:text="@string/gallery"
        app:layout_constraintBottom_toTopOf="@+id/textGalleryLaunch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineCenterVertical"
        app:layout_constraintTop_toBottomOf="@id/tv_lon"
        tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/textGalleryLaunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/gallery"
        app:layout_constraintBottom_toTopOf="@+id/descTextLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guidelineCenterVertical"
        app:layout_constraintTop_toBottomOf="@+id/launchGallery" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintBottom_toTopOf="@+id/uploadButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descText"
            android:layout_width="match_parent"
            android:layout_height="141dp"
            android:hint="@string/description"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenterVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="202dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="369dp" />

</androidx.constraintlayout.widget.ConstraintLayout>